# ThreadToParagraph

./: README.md  app.py  models.py  pyproject.toml  twitter_utils.py
instance/: threads.db
static/css/: custom.css
static/js/: main.js
templates/: base.html  index.html
